--- a/options.html
+++ b/options.html
@@ -23,7 +23,7 @@
           placeholder="press a key"
         />
         <input class="customValue" type="text" placeholder="value (0.10)" />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -39,7 +39,7 @@
           placeholder="press a key"
         />
         <input class="customValue" type="text" placeholder="value (0.10)" />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -55,7 +55,7 @@
           placeholder="press a key"
         />
         <input class="customValue" type="text" placeholder="value (0.10)" />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -71,7 +71,7 @@
           placeholder="press a key"
         />
         <input class="customValue" type="text" placeholder="value (10)" />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -87,7 +87,7 @@
           placeholder="press a key"
         />
         <input class="customValue" type="text" placeholder="value (10)" />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -108,7 +108,7 @@
           placeholder="value (1.00)"
           disabled
         />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -124,7 +124,7 @@
           placeholder="press a key"
         />
         <input class="customValue" type="text" placeholder="value (1.80)" />
-        <select class="customForce">
+        <select class="customForce experimental">
           <option value="false">Do not disable website key bindings</option>
           <option value="true">Disable websites key bindings</option>
         </select>
@@ -167,6 +167,24 @@
           >
         </label>
         <textarea id="blacklist" rows="10" cols="50"></textarea>
+      </div>
+      <div class="row" class="experimental">
+        <label for="bouncefix" class="experimental"
+          >Sites to apply experimental bounce fix to<br />
+          (one per line)<br />
+          <br />
+          <em
+            ><a href="https://www.regexpal.com/">Regex</a> is supported. Be sure
+            it is in "//g" format.<br />
+            ie: /(.+)youtube\.com(\/*)$/gi</em
+          >
+        </label>
+        <textarea
+          id="bouncefix"
+          class="experimental"
+          rows="10"
+          cols="50"
+        ></textarea>
       </div>
     </section>
 
